--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Application name
 spring.application.name=mortgageportal
+
+# Default profile - will be overridden by specific profile files
+spring.profiles.active=dev
+
+# Common configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# See README for .env setup instructions
