--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -22,6 +22,16 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      acks: all
+      retries: 3
+      delivery-timeout-ms: 120000
+      request-timeout-ms: 30000
+      enable-idempotence: true
+      max-in-flight-requests-per-connection: 5
+  activemq:
+    broker-url: vm://embedded?broker.persistent=false
+    packages:
+      trust-all: true
 
 server:
   port: 8080
