--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -34,6 +34,14 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       acks: all
       retries: 3
+      delivery-timeout-ms: 120000
+      request-timeout-ms: 30000
+      enable-idempotence: true
+      max-in-flight-requests-per-connection: 5
+  activemq:
+    broker-url: ${ACTIVEMQ_BROKER_URL:vm://embedded?broker.persistent=false}
+    packages:
+      trust-all: true
 
 server:
   port: 8080
